# test-github-pages

./: pyproject.toml
doc/source/: conf.py
docs/source/: index.rst
