[tool.poetry]
name = "gh-pages"
version = "0.1.0"
description = ""
authors = ["Johannes Kaisinger <johannes.kaisinger@ginzinger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
Sphinx = "7.2.6"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
